--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,26 @@
+<div class="content-wrapper">
+
+    <div class="content-block">
+        <div class="content">
+
+        </div>
+    </div>
+
+
+    <div class="sidebar">
+        <div class="box">
+
+        </div>
+
+        
+        <div class="box">
+
+        </div>
+
+    </div>
+</div>
+
+
+
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
