--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#welcome-index{
+    .content-wrapper{
+        display: flex;
+        
+        .content-block{
+            border: 2px solid #000;
+            padding: 20px;
+            width: 80%;
+
+            .content{
+                
+            }
+        }
+
+        .sidebar{
+            border: 2px solid #000;
+            width: 20%;
+            padding: 20px;
+
+                .box{
+                    background-color: #000;
+                    width: 100px;
+                    height: 100px;
+                    margin: 10px auto;
+                }
+        }
+
+    }
+}
