--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,7 +12,40 @@
             width: 80%;
 
             .content{
+                .user-about{
+                    display: flex;
+                }
+
+                .image{
+                    width: 10%;
+                }
+
+                .profile{
+                    margin-left: 10px;
                 
+
+                    .name-history{
+                        width: 100%;
+                        display: flex;
+                        margin-bottom: 15px;
+                    }
+
+                    .name{
+                        font-weight: bold;
+
+                    }
+
+                    .learning-history{
+                        margin-left: 20px;
+                    }
+
+                    .purpose{
+                        width: 100%;
+                        font-size: 13px;
+                    }
+                }
+
+
             }
         }
 
