--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,41 @@
 
     <div class="content-block">
         <div class="content">
+            <div class="user-about">
 
+                <div class="image">
+                    <%= image_tag  "ninja.jpg"%>
+                </div>
+
+                <div class="profile">
+
+                    <div class="name-history">
+                        <div class="name">
+                            ゆーじ
+                        </div>
+
+                        <div class="learning-history">
+                            学習歴：１年未満
+                        </div>
+                    </div>
+
+                    <div class="purpose">
+                        目的：Ruby on Rails, docker, heroku技術の習得
+                    </div>
+
+                </div>
+            
+            </div>
+
+            <div class="text">
+                <p>これはサンプルテキストです</p>
+                <p>これはサンプルテキストです</p>
+            </div>
+
+            <div class="action-menu">
+                <div class="like"></div>
+                <div class="comment"></div>
+            </div>
         </div>
     </div>
 
@@ -12,7 +46,7 @@
 
         </div>
 
-        
+
         <div class="box">
 
         </div>
