--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,10 @@
 <div class="content-wrapper">
 
     <div class="content-block">
+
+    <% (1..10).each do |i| %>
+
+
         <div class="content">
             <div class="user-about">
 
@@ -38,6 +42,8 @@
                 <div class="comment"></div>
             </div>
         </div>
+
+    <% end %>
     </div>
 
 
