--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,15 +3,22 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #welcome-index{
+
+    
     .content-wrapper{
         display: flex;
+        justify-content: space-between;
         
         .content-block{
             border: 2px solid #000;
             padding: 20px;
-            width: 80%;
+            width: 60%;
 
             .content{
+                border: 2px solid black;
+                padding: 15px;
+                margin-bottom: 10px;
+
                 .user-about{
                     display: flex;
                 }
