--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
     <div class="link">
         <ul id="nav">
             <li>
-                <a href="#">メニュー１</a>
+                <%= link_to  "投稿する", new_post_path %>
             </li>
             <li>
                 <a href="#">メニュー2</a>
