--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,6 +36,15 @@
                 <p> <%= post.content %> </p>
             </div>
 
+
+            <% if post.images.attached? %>
+                <div class="images">
+                    <% post.images.each do |image| %>
+                        <%= image_tag image %>
+                    <% end %>
+                </div>
+            <% end %>
+
             <div class="action-menu">
                 <div class="like"></div>
                 <div class="comment"></div>
@@ -59,7 +68,3 @@
     </div>
 </div>
 
-
-
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
