--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,15 +6,25 @@
 
     <div class="link">
         <ul id="nav">
+            <% if user_signed_in? %>
+
             <li>
                 <%= link_to  "投稿する", new_post_path %>
             </li>
+
             <li>
-                <a href="#">メニュー2</a>
+                <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
+            </li>
+
+            <% else %>
+            <li>
+                <%= link_to '登録する', new_user_registration_path %>
             </li>
             <li>
-                <a href="#">メニュー3</a>
+                <%= link_to 'ログイン', new_user_session_path %>
             </li>
+            <% end %>
+
         </ul>
     </div>
 </div>
