--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,6 +13,10 @@
             </li>
 
             <li>
+                <%= link_to  "プロフィール", new_profile_path %>
+            </li>
+
+            <li>
                 <%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
             </li>
 
