--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,9 @@
 <div id="header">
 
     <div class="logo">
-        <a href="/">ロゴ</a>
+        <a href="/">
+            <%= image_tag  "vitamin.jpg" %>
+        </a>
     </div>
 
     <div class="link">
