--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -21,6 +21,12 @@
                 -moz-appearance: none;
               }
         }
+
+        .image-preview{
+            img{
+                max-width: 200px;
+            }
+        }
         
 
         .submit-block{
